[gd_scene load_steps=3 format=3 uid="uid://drgb25lub04ll"]

[ext_resource type="Script" path="res://scripts/user_interface/game_ui.gd" id="1_xwl0a"]
[ext_resource type="Theme" uid="uid://d018ofb37nf7u" path="res://assets/ui/fonts/global_theme.tres" id="2_iclks"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_xwl0a")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme = ExtResource("2_iclks")

[node name="MovesLeft" type="Label" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.25098, 0.184314, 0.105882, 1)
theme_override_font_sizes/font_size = 128
text = "13"

[node name="BottomRightContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -128.0
offset_right = 136.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
alignment = 2

[node name="ExitBtn" type="Button" parent="BottomRightContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "EXIT"

[node name="ResetBtn" type="Button" parent="BottomRightContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "RESET"

[connection signal="pressed" from="BottomRightContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="BottomRightContainer/ResetBtn" to="." method="_on_reset_btn_pressed"]
